убарана логика подтверждения пароля
